add detail on projects

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <section class="binner">
         <div>
-            <p class="profile-animation animated" id="typewriter-loop">I am zin min aung, website developer. </p>
+            <p class="profile-animation" id="typewriter-loop">I am zin min aung, website developer. </p>
         </div>
         <img src="./src/imgs/profile.png" id="profile-photo">
     </section>
@@ -100,38 +100,41 @@
             </div> 
         </div>
 
-        <h1>Here Are My Projects</h1>
+        <hr/>
+
+        <h1>Some React Projects</h1>
 
         <div class="projects animated">
             <a href="https://dreamy-mousse-582bf8.netlify.app/">
                 <img src="./src/imgs/dictionary.png"/>
                 <span>Dictionary</span>
+                <p>Simple React Diction for student using Api and React </p>
             </a>
 
             <a href="https://harmonious-wisp-6aed60.netlify.app/">
                 <img src="./src/imgs/book.png"/>
                 <span>E-book</span>
+                <p>Book reader with my one of my favorite Book using React </p>
             </a>
 
             <a href="https://rainbow-liger-0dd066.netlify.app/">
                 <img src="./src/imgs/quiz.png"/>
                 <span>Mutiple Choice Quiz</span>
+                <p>Simple Mutiple Choice Quiz </p>
             </a>
 
             <a href="https://fluffy-squirrel-42379a.netlify.app/">
                 <img src="./src/imgs/calculator.png"/>
                 <span>Calculator</span>
+                <p>Simple Calculator Using React</p>
             </a>
 
             <a href="https://deft-muffin-770d37.netlify.app/">
                 <img src="./src/imgs/restaurant-building.png"/>
                 <span>Demo-Bussiness App</span>
+                <p>Bussiness app using React</p>
             </a>
             
-            <a href="https://celebrated-scone-6f76a4.netlify.app/">
-                <img src="./src/imgs/list.png"/>
-                <spam>To Do List</spam>
-            </a>
 
         </div>
     </section>
