--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <section class="binner">
         <div>
-            <p class="profile-animation" id="typewriter-loop">I am zin min aung, website developer. </p>
+            <p class="profile-animation" id="typewriter-loop"></p>
         </div>
         <img src="./src/imgs/profile.png" id="profile-photo">
     </section>
